# video-toolbox

./: .gitignore  ANIMATIONS.md  README.md  forge.config.js  main.js  package-lock.json  package.json  preload.js
renderer/: constants.js  index.html  preload.js  renderer.js  sidebar.js  styles.css
renderer/modules/: apps.js  downloader.js  encoder.js  extract-audio.js  image-to-pdf.js  inspector.js  queue.js  state.js  trimmer.js  ui-utils.js  video-to-gif.js
scripts/: clean-target.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
